--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 .App {
   text-align: center;
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+  position: relative;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Nav {
+  height: 10vh;
+  background-color: rgb(255, 255, 255);
+  color: #0057ad;
+  width: 100%;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
+}
+.Buttons {
+  width: 60%;
+  margin-left: 20%;
+  margin-right: 20%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 10vh;
+}
+.detail {
+  position: absolute;
+  top: 25%;
+  left: 35%;
+  z-index: 10;
+  box-sizing: border-box;
+  width: 400px;
+  margin: 30px;
+  min-height: 249px;
+  color: black;
+  box-shadow: 2px 0 10px 2px rgba(0, 0, 0, 0.3);
+  display: column;
+  background-color: white;
+  margin-bottom: 10px;
+  opacity: 1;
+  font-size: 18px;
+}
+.detailFile {
+  text-align: center;
+  min-height: 200px;
+  display: flex;
+  justify-content: space-evenly;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.detailHolder {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 8px 16px;
+  transition: all 0.3s ease 0s;
+  line-height: 1;
+  display: inline-block;
+  text-decoration: none;
+  vertical-align: middle;
+  text-align: center;
+  color: rgb(225, 0, 120);
+  border: 2px solid rgb(225, 0, 120);
+  background-color: rgb(255, 255, 255);
+}
+.button:hover {
+  transition: all 0.3s ease 0s;
+  color: rgb(225, 255, 255);
+  border: 2px solid rgb(225, 255, 255);
+  background-color: rgb(255, 0, 120);
+}
+.header {
+  margin-right: 50px;
+}
+img {
+  margin-left: 20px;
+}
+.Container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.folder {
+  box-sizing: border-box;
+  width: 349px;
+  margin: 30px;
+  height: 349px;
+  color: black;
+  box-shadow: 2px 0 10px 2px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 18px;
+  cursor: pointer;
+}
+.fileIcon {
+  color: #0057ad;
 }
